2007-07-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Register EXSLT extensions, so the world can be right again

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

        * configure.in: 
        * NEWS:
        - Version 2.19.1

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/Makefile.am: 
	Disable test programs for now
	
== REWORK CHANGES ==

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	Merge of yelp rework branch:
	- Depreciate yelp-*-pager in favour of
	  yelp-document and such.
	  Gives us on-demand loading of pages
	- Switch to using rarian instead of scrollkeeper
	- Update to using shiny newness of gnome-doc-utils
	- Make printing docbook pretty
	- Clean up lots of errors and general cleanup
	  of other source files
	- Make our resolver much, much better
	  - and remove reliance on libgnome there
	

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-settings.c: 
	* configure.in:
	* src/yelp-settings.h:
	* src/Makefile.am:
	* stylesheets/yelp-common.xsl:
	Make themes sort-of work.  Good enough for
	a release, anyway.

2007-07-29  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	Make loading of files directly work again
	
2007-07-24  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-info.c: 
	* src/yelp-man.c:
	* src/yelp-docbook.c:
	Add in some pretty parameters

	* src/yelp-db-print.c:
	Fix parameters to make printed docs *slightly*
	prettier
	
	* src/yelp-search-parser.c: 
	Convert search across to use Rarian
	and clean up lots of crud from the file
	
2007-07-23  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.ac:
	* src/yelp-base.c:
	* src/yelp-search-parser.c:
	* src/yelp-search.c:
	* src/yelp-window.c:
	* src/yelp-window.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/Makefile.am:
	* src/yelp-main.c:
	Massive cleanup
	Remove old code from yelp-utils
	Fix shutdown requests from sessions (hopefully)
	Remove as many warnings as possible (the rest are
	mostly mozilla errors)